Bug 470778 - Window decoration currently in use is not highlighted in Window Decorations KCM
Summary: Window decoration currently in use is not highlighted in Window Decorations KCM
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwindecoration (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-06-08 11:30 UTC by Patrick Silva
Modified: 2023-08-05 10:03 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-06-08 11:30:02 UTC
STEPS TO REPRODUCE
1. open Window Decorations KCM
2. 
3. 

OBSERVED RESULT
Window decoration currently in use is not highlighted

EXPECTED RESULT
Window decoration currently in use is highlighted

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.0
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-06-09 15:26:45 UTC
Can reproduce.
Comment 2 Nicolas Fella 2023-06-13 20:44:25 UTC
It seems to work correctly with kcmshell6, but not with systemsettings
Comment 3 Bug Janitor Service 2023-08-04 11:35:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4296
Comment 4 Kai Uwe Broulik 2023-08-05 10:03:48 UTC
Git commit 8d571b0d1d158769cce0cde4ac3f85b97f1c0873 by Kai Uwe Broulik.
Committed on 05/08/2023 at 11:42.
Pushed by broulik into branch 'master'.

kcms/decoration: Connect model signals for theme property

The theme property depends on the contents of the model,
so signal a change if the model has items added/removed
or got reset.

M  +4    -0    src/kcms/decoration/kcm.cpp

https://invent.kde.org/plasma/kwin/-/commit/8d571b0d1d158769cce0cde4ac3f85b97f1c0873