kcms/decoration: Connect model signals for theme property

The theme property depends on the contents of the model,
so signal a change if the model has items added/removed
or got reset.

BUG: 470778